--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,16 +1,16 @@
 # パラメータ設定
-preprocess: True
+force_preprocess: True
 num_classes: 1854
 num_epochs: 50
 num_batches: 32
 learning_rate: 0.001
 num_patience: 7
 
-use_cv: True
-n_splits: 25
+use_cv: False
+n_splits: 5
 
-dry_run: False
-use_wandb: True
+dry_run: True
+
 
 data_augmentation_train: False
 data_augmentation_test: False
@@ -20,7 +20,7 @@ splitter_name: KFold
 
 optimizer: AdamW
 
-model_name: EEGNet
+model_name: EEGNetImproved
 dropout_rate: 0.5
 
 
@@ -37,6 +37,7 @@ device: cuda:0
 num_workers: 4
 seed: 3711
 
+use_wandb: False
 
 data_dir: data
 
