--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,7 +10,7 @@ seed: 3711
 num_classes: 1854
 num_subjects: 4
 num_epochs: 50
-num_batches: 32
+num_batches: 16
 learning_rate: 0.001
 num_patience: 7
 
@@ -32,7 +32,7 @@ num_timepoints: 128
 fs: 128
 
 # 交差検証
-splitter_name: StratifiedKFold
+splitter_name: KFold
 use_cv: False
 n_splits: 5
 
