--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,20 +1,22 @@
 wandb:
   project: "MEG-classification"
-  comment: "EEGNetWithSubjectBatchNormAdd"
+  comment: "ベースライン補正＋３回"
 
 dry_run: False
 use_wandb: True
-use_amp: True
+# use_pin_memory: True
+# use_non_blocking: True
+use_amp: False
 device: cuda:0
 num_workers: 4
 seed: 3711
 num_classes: 1854
 num_subjects: 4
-num_epochs: 100
-num_batches: 128
+num_epochs: 20
+# num_epochs: 100
 # num_batches: 32
-# learning_rate: 0.001
-learning_rate: 0.001
+num_batches: 128
+learning_rate: 0.0001
 num_patience: 10
 
 
@@ -29,15 +31,15 @@ force_preprocess: False
 current_rate: 281
 lowcut: 0.5
 highcut: 50
-target_rate: 128
+target_rate: 32
 num_channels: 271  # チャンネル数
 num_timepoints: 128
 fs: 128
 
 # 交差検証
 splitter_name: KFold
-use_cv: True
-n_splits: 10
+use_cv: False
+n_splits: 5
 
 optimizer: AdamW
 scheduler: CosineLRScheduler
@@ -79,6 +81,13 @@ model:
       dropout_rate: 0.5
       num_subjects: 4
   - name: "EEGNetWithSubjectBatchNormAll3"
+    params:
+      num_classes: 1854
+      Chans: 271
+      Samples: 128
+      dropout_rate: 0.5
+      num_subjects: 4
+  - name: "EEGNetWithSubject"
     params:
       num_classes: 1854
       Chans: 271
