--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,12 +1,12 @@
 wandb:
   project: "MEG-classification"
-  comment: "Attention+R"
+  comment: "オリジナルに戻す"
 
 dry_run: False
 use_wandb: True
 # use_pin_memory: True
 # use_non_blocking: True
-use_amp: False
+use_amp: True
 use_multi_seeds: False
 device: cuda:0
 num_workers: 4
@@ -14,26 +14,27 @@ seed: 3711
 num_classes: 1854
 num_subjects: 4
 # num_epochs: 20
-num_epochs: 100
+num_epochs: 200
 # num_batches: 32
-# num_batches: 128
-num_batches: 256
+num_batches: 128
+# num_batches: 256
 learning_rate: 0.001
-num_patience: 10
+num_patience: 30
 
 
 # データセット
 data_dir: data
-data_augmentation_train: False
+data_augmentation_train: True
 data_augmentation_test: False
 augmentation_prob: 0.2
 
 # 前処理
+use_resampling: False
 force_preprocess: False
 current_rate: 281
 lowcut: 0.5
 highcut: 50
-target_rate: 32
+target_rate: 128
 num_channels: 271  # チャンネル数
 num_timepoints: 128
 fs: 128
@@ -46,9 +47,14 @@ n_splits: 5
 
 optimizer: AdamW
 scheduler: CosineLRScheduler
+t_initial: 100
+lr_min: 0.00005
+warmup_t: 2
+warmup_lr_init: 0.0005
+
 
 model_name: 
-selected_model_index: 8
+selected_model_index: 5
 model:
   - name: "EEGNet"
     params:
