--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,6 @@
 wandb:
   project: "MEG-classification"
-  comment: "被験者ID注入"
+  comment: "元のモデルでスコア確認"
 
 dry_run: False
 use_wandb: True
@@ -19,7 +19,7 @@ num_epochs: 200
 num_batches: 128
 # num_batches: 256
 learning_rate: 0.001
-num_patience: 30
+num_patience: 15
 
 
 # データセット
@@ -42,19 +42,19 @@ use_baseline_correction: False
 
 # 交差検証
 splitter_name: KFold
-use_cv: False
-n_splits: 5
+use_cv: True
+n_splits: 7
 
 optimizer: AdamW
 scheduler: CosineLRScheduler
-t_initial: 100
+t_initial: 60
 lr_min: 0.00005
 warmup_t: 2
 warmup_lr_init: 0.0005
 
 
 model_name: 
-selected_model_index: 7
+selected_model_index: 5
 model:
   - name: "EEGNet"
     params:
