--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -48,8 +48,8 @@ use_label_smoothing: False
 
 # 交差検証
 splitter_name: KFold
-use_cv: True
-n_splits: 12
+use_cv: False
+n_splits: 5
 
 optimizer: AdamW
 scheduler: CosineLRScheduler
@@ -63,7 +63,7 @@ lr_min: 0.0008
 
 
 model_name: 
-selected_model_index: 5
+selected_model_index: 3
 model:
   - name: "EEGNet"
     params:
